# neotec_build

./: README.md  license.txt  pyproject.toml
neotec_build/: hooks.py  modules.txt
neotec_build/api/: __init__.py
neotec_build/neotec_build/doctype/boq/: boq.js  boq.json  boq.py
neotec_build/neotec_build/doctype/boq_item/: boq_item.json  boq_item.py
neotec_build/neotec_build/doctype/interim_payment_certificate/: interim_payment_certificate.js  interim_payment_certificate.json  interim_payment_certificate.py
neotec_build/neotec_build/doctype/ipc_item/: ipc_item.json  ipc_item.py
neotec_build/neotec_build/doctype/neobuild_company_defaults/: neobuild_company_defaults.json  neobuild_company_defaults.py
neotec_build/neotec_build/doctype/neobuild_settings/: neobuild_settings.json  neobuild_settings.py
neotec_build/neotec_build/doctype/ra_bill/: ra_bill.js  ra_bill.json  ra_bill.py
neotec_build/neotec_build/doctype/ra_bill_item/: ra_bill_item.json  ra_bill_item.py
neotec_build/neotec_build/doctype/retention_release/: retention_release.js  retention_release.json  retention_release.py
neotec_build/neotec_build/doctype/subcontract_work_order/: subcontract_work_order.js  subcontract_work_order.json  subcontract_work_order.py
neotec_build/neotec_build/doctype/subcontract_work_order_item/: subcontract_work_order_item.json  subcontract_work_order_item.py
neotec_build/neotec_build/report/retention_ledger/: retention_ledger.json  retention_ledger.py
neotec_build/setup/: install.py
neotec_build/tasks/: boq_import.py
neotec_build/utils/: billing.py
